# GafferCycles

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.wine  LICENSE  README.md  build.py  build_docker.sh  build_docker_optix.sh  build_docker_optix_experimental.sh  build_docker_wine.sh  build_linux_osx.sh  build_ubuntu.sh
dependencies/Embree/: config.py
dependencies/Gflags/: config.py
dependencies/Gflags/patches/: glibcxxUseCXX11ABI.patch
dependencies/Glog/: config.py
dependencies/Glog/patches/: glibcxxUseCXX11ABI.patch
dependencies/NanoVDB/: config.py
dependencies/OpenImageDenoise/: config.py
dependencies/OpenSubdiv/: config.py
dependencies/PugiXML/: config.py
examples/: gafferbot.gfr
include/GafferCycles/IECoreCyclesPreview/: CameraAlgo.h
include/GafferOIDN/: Denoise.h  Export.h  TypeIds.h
python/GafferCyclesUI/: CyclesOptionsUI.py
python/GafferOIDN/: __init__.py
python/GafferOIDNUI/: DenoiseUI.py  __init__.py
src/GafferCycles/: CyclesOptions.cpp
src/GafferCycles/IECoreCyclesPreview/: CameraAlgo.cpp  Renderer.cpp
src/GafferOIDN/: Denoise.cpp
src/GafferOIDNModule/: GafferOIDNModule.cpp
startup/gui/: menus.py  outputs.py
